<resources>
    <string name="app_name">e-Ticket</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="basic_preferences">Basic</string>
    <string name="title_basic_preference">Basic Preference</string>
    <string name="summary_basic_preference">Example of basic preference</string>
    <string name="title_stylish_preference">Stylish Preference</string>
    <string name="summary_stylish_preference">Example of stylish preference</string>
    <string name="title_icon_preference">Icon Preference</string>
    <string name="summary_icon_preference">Example of preference with icon</string>
    <string name="title_single_line_title_preference">Single Line Title Preference</string>
    <string name="summary_single_line_title_preference">Example of single line title preference</string>
    <string name="widgets">Widgets</string>
    <string name="dialogs">Dialogs</string>
    <string name="title_checkbox_preference">Checkbox Preference</string>
    <string name="summary_checkbox_preference">Example of checkbox preference</string>
    <string name="title_switch_preference">Switch Preference</string>
    <string name="summary_switch_preference">Example of switch preference</string>
    <string name="title_dropdown_preference">Dropdown Preference</string>
    <string name="title_seekbar_preference">Seekbar Preference</string>
    <string name="title_edittext_preference">Edittext Preference</string>
    <string name="dialog_title_edittext_preference">EditText Preference</string>
    <string name="title_list_preference">List Preference</string>
    <string name="dialog_title_list_preference">List Preference</string>
    <string name="title_multi_list_preference">Multi List Preference</string>
    <string name="summary_multi_list_preference">Summary of multi  list preference</string>
    <string name="dialog_title_multi_list_preference">Multi List Preference</string>
    <string name="advanced_attributes">Advanced</string>
    <string name="title_expandable_preference">Expandable Preference</string>
    <string name="summary_expandable_preference">Summary of expandable preference</string>
    <string name="title_intent_preference">Intent Preference</string>
    <string name="summary_intent_preference">Summary of intent preference</string>
    <string name="title_parent_preference">Parent Preference</string>
    <string name="summary_parent_preference">Summary of parent preference</string>
    <string name="title_child_preference">Child Preference</string>
    <string name="summary_child_preference">Summary of child preference</string>
    <string name="title_toggle_summary_preference">Toggle Summary Preference</string>
    <string name="summary_on_toggle_summary_preference">Summary when toggle on</string>
    <string name="summary_off_toggle_summary_preference">Summary when toggle off</string>
    <string name="title_copyable_preference">Copyable Preference</string>
    <string name="summary_copyable_preference">Summary of copyable preference</string>
    <string name="home">Home</string>
    <string name="pesan_film">Pesan Film</string>
    <string name="film_bioskop">Film Bioskop :</string>
    <string name="jam_tayang">Jam Tayang :</string>
    <string name="makanan">Makanan :</string>
    <string name="nama">Nama :</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="film">Film :</string>

    <array name="ListBioskop">
        <item>Araya XXI</item>
        <item>TransMart MX Mall XXI</item>
        <item>Dieng XXI</item>
        <item>Mandala XXI</item>
        <item>Aurora Cinemax</item>
        <item>MovieMax Dinoyo</item>
        <item>MovieMax Sarinah</item>
        <item>MovieMax City Point</item>
    </array>


    <array name="ListFilm">
        <item>Avengers</item>
        <item>Harry Potter</item>
        <item>Captain America</item>
        <item>Fifty Shades Of Black</item>
        <item>Upin Ipin</item>
        <item>Gatot Kaca</item>
    </array>

    <array name="ListJam">
        <item>10.45</item>
        <item>12.30</item>
        <item>14.15</item>
        <item>16.25</item>
        <item>18.45</item>
        <item>20.15</item>
        <item>22.30</item>
    </array>

    <array name="ListMakan">
        <item>Popcorn Small</item>
        <item>Popcorn Large</item>
        <item>Paket 1 (Popcorn Small dan Cola)0</item>
        <item>Paket 2 (Popcorn Large dan Cola)</item>
    </array>


</resources>
